# finn2

./: .gitignore  Dockerfile  LTV Scenario Steps.xlsx  README.md  agent_deps.json  commands.txt  entrypoint.sh  exp.py  ltv_toolset_descs.md  message_history.json  pyproject.toml  steps.md  test_describe_file.py  update_toolset.txt
src/finn2/: __init__.py  finn_deps.py  gradio_ui.py  plan_act.py  prompt.md  test_ui.py  toolset_agent.py
src/finn2/toolsets/: arithmetic_toolset.py  conditional_toolset.py  date_and_time_toolset.py  file_toolset.py  financial_toolset.py  logical_and_errors_toolset.py  lookup_and_reference_toolset.py  math_tools..py  math_tools.py  math_toolset.py  toolset_utils.py  transformation_and_pivoting_toolset.py
src/finn2/toolsets/excel_toolsets/: excel_formula_toolset.py  excel_structure_toolset.py
src/finn2/toolsets/polars_toolsets/: file_toolset.py
