[project]
name = "finn2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "HamzaFarhan", email = "thehamza96@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dreamai",
    "ipykernel>=6.30.1",
    "logfire[httpx]>=4.2.0",
    "loguru>=0.7.3",
    "numpy>=2.3.2",
    "openai==1.99.7",
    "polars>=1.32.1",
    "pydantic-ai",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
pydantic-ai = { git = "https://github.com/pydantic/pydantic-ai.git" }
dreamai = { path = "../dreamai", editable = true }
