[project]
name = "finn2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "HamzaFarhan", email = "thehamza96@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dreamai>=4.2.10",
    "gradio>=5.43.1",
    "ipykernel>=6.30.1",
    "logfire[httpx]>=4.2.0",
    "loguru>=0.7.3",
    "numpy>=2.3.2",
    "openai==1.99.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "polars>=1.32.1",
    "pydantic-ai>=0.7.0",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

